--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
     <!-- Gameplay Options -->
     <section id="gameplay-option">
         <div id="container-fluid">
-            <div class="d-md-flex flex-column justify-content-center mx-5 pt-5" style="height: 200px;">
+            <div class="d-sm-flex flex-column justify-content-center mx-5 pt-5" style="height: 200px;">
                 <h1 class="fw-bold text-light" id="text-game-option">What's So Special ?</h1>
                 <h1 class="fw-bold text-light" id="text-game-option-1">THE GAMES</h1>
             </div>
             <div class="row justify-content-center me-0" id="carousel-game-option">
-                <div class="col-lg-6">
+                <div class="col-md-6 col-sm-10">
                     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
@@ -137,21 +137,21 @@
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img src="assets/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
+                                <div class="carousel-caption d-none d-lg-block">
                                     <h5>First Game !</h5>
                                     <p>Some representative placeholder content for the first slide.</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="assets/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
+                                <div class="carousel-caption d-none d-lg-block">
                                     <h5>Second Game !</h5>
                                     <p>Some representative placeholder content for the second slide.</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="assets/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
+                                <div class="carousel-caption d-none d-lg-block">
                                     <h5>Third Game !</h5>
                                     <p>Some representative placeholder content for the third slide.</p>
                                 </div>
@@ -175,43 +175,47 @@
     <!-- Gameplay Options END TAG -->
     <!-- Game Feature -->
     <section id="game-feature">
-        <div class="container-fluid">
-            <div class="contaier">
-                <div class="row justify-content-end" id="collumn-feature">
-                    <div class="col-lg-4 fw-bold text-light" id="text-size-feature">
-                        <h2>What's So Special ?</h2>
-                        <h1>FEATURES</h1>
-                    </div>
-                </div>
-                <div class="row justify-content-end" id="collumn-feature1">
-                    <div class="col-lg-1 text-end d-none d-lg-block">
-                        <img class="img-fluid" src="assets/ellipse-orange.png" alt="ellipse-orange" width="30"
-                            height="30">
-                    </div>
-                    <div class="col-lg-4 fw-bold text-light" id="text-title-feature">
-                        <h2>TRADITIONAL GAMES</h2>
-                        <p>If you miss your childhood, we provide many traditional games here</p>
-                    </div>
-                </div>
-                <div class="row justify-content-end" id="collumn-feature1">
-                    <div class="col-lg-1 text-end d-none d-lg-block">
-                        <img class="img-fluid" src="assets/ellipse-outline.svg" alt="ellipse-outline" width="30"
-                            height="30">
-                    </div>
-                    <div class="col-lg-4 fw-bold text-light">
-                        <h2 id="text-title-feature">GAME SUIT</h2>
-                    </div>
-                </div>
-                <div class="row justify-content-end" id="collumn-feature1">
-                    <div class="col-lg-1 text-end d-none d-lg-block">
-                        <img class="img-fluid" src="assets/ellipse-outline.svg" alt="ellipse-outline" width="30"
-                            height="30">
-                    </div>
-                    <div class="col-lg-4 fw-bold text-light">
-                        <h2 id="text-title-feature">TBD</h2>
-                    </div>
+        <!-- <div class="container-fluid"> -->
+        <div class="container">
+            <div class="row justify-content-end ms-lg-0 ps-lg-0 pt-5 pe-5 ms-md-3" id="collumn-feature">
+                <div class="col-lg-5 col-md-8 col-sm-10 ps-lg-0 fw-bold text-light text-sm-start">
+                    <h2 id="text-size-feature">What's So Special ?</h2>
                 </div>
             </div>
+            <div class="row justify-content-end ps-lg-0 pt-1 pe-5" id="collumn-feature0">
+                <div class="col-lg-5 col-md-7 col-sm-10 ps-lg-0 fw-bold text-light text-md-start text-sm-end">
+                    <h1 id="text-size-feature1">FEATURES:</h1>
+                </div>
+            </div>
+            <div class="row justify-content-end pt-sm-5 ps-lg-4" id="collumn-feature1">
+                <div class="col-md-1 col-sm-3 text-end d-none d-sm-block">
+                    <img class="img-fluid" src="assets/ellipse-orange.png" alt="ellipse-orange" width="30" height="30">
+                </div>
+                <div class="col-md-6 col-lg-5 col-sm-9 fw-bold text-light" id="text-title-feature">
+                    <h2>TRADITIONAL GAMES</h2>
+                    <p>If you miss your childhood, we provide many traditional games here</p>
+                </div>
+            </div>
+            <div class="row justify-content-end pt-3 ps-lg-4" id="collumn-feature1">
+                <div class="col-md-1 col-sm-3 text-end d-none d-sm-block">
+                    <img class="img-fluid" src="assets/ellipse-outline.svg" alt="ellipse-outline" width="30"
+                        height="30">
+                </div>
+                <div class="col-md-6  col-lg-5 col-sm-9 fw-bold text-light">
+                    <h2 id="text-title-feature">GAME SUIT</h2>
+                </div>
+            </div>
+            <div class="row justify-content-end pt-3 ps-lg-4" id="collumn-feature1">
+                <div class="col-md-1 col-sm-3 text-end d-none d-sm-block">
+                    <img class="img-fluid" src="assets/ellipse-outline.svg" alt="ellipse-outline" width="30"
+                        height="30">
+                </div>
+                <div class="col-md-6  col-lg-5 col-sm-9 fw-bold text-light">
+                    <h2 id="text-title-feature">TBD</h2>
+                </div>
+            </div>
+        </div>
+        <!-- </div> -->
     </section>
     <!-- Game Feature End Tag -->
     <!-- System Requirement -->
@@ -219,18 +223,18 @@
         <div class="container-fluid">
             <div class="container">
                 <div class="row justify-content-center pt-5">
-                    <div class="col-lg-auto">
+                    <div class="col-md-auto">
                         <h2 id="TextTittleRequirement">Can My Computer Run This Game?</h2>
                     </div>
                 </div>
                 <!-- System Requirements  -->
                 <div class="row justify-content-md-start pt-5">
-                    <div class="col-lg-auto">
+                    <div class="col-md-auto">
                         <h2 id="TextRequirement">SYSTEM REQUIREMENTS :</h2>
                     </div>
                 </div>
                 <!-- Table Section  -->
-                <div class="table-responsive-md pt-3">
+                <div class="table-responsive-sm pt-3">
                     <table class="table table-sm table-bordered" style="width: 50%;" id="TableText">
                         <tbody>
                             <tr>
@@ -272,23 +276,23 @@
     <section id="TopScore">
         <div class="container-fluid">
             <div class="container">
-                <div class="row pt-5 justify-content-md-start">
-                    <div class="col-md-5" id="TextTopScore">
+                <div class="row pt-5 justify-content-sm-start">
+                    <div class="col-lg-5 col-md-8 col-sm-12" id="TextTopScore">
                         <h1>Top Scores</h1>
                         <p>This top score from various games provided on this platform</p>
                         <button class="btn btn bg-warning">See More</button>
                     </div>
                 </div>
                 <!-- CARD 1 -->
-                <div class="row pb-4">
-                    <div class="col-md-5 offset-md-7">
+                <div class="row pb-4 pt-sm-2">
+                    <div class="col-lg-5 offset-lg-7 col-md-8 offset-md-4 col-sm-11">
                         <div class="card bg-dark">
                             <div class="card-header row" id="header-text-img">
-                                <img src="assets/evan-lahti.jpg"
-                                    class="float-md-start img-fluid rounded-circle col-md-3" alt="Player TopScore">
-                                <h2 class="col-md-5 text-md-start">Evan Lahti Pc Gamer</h2>
+                                <img src="assets/evan-lahti.jpg" class="float-start img-fluid rounded-circle col-sm-3"
+                                    alt="Player TopScore">
+                                <h2 class="col-sm-5 text-start">Evan Lahti Pc Gamer</h2>
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-                                    class="ms-md-5 bi bi-twitter col-md-2" viewBox="0 0 16 16">
+                                    class="ms-sm-5 bi bi-twitter col-sm-2" viewBox="0 0 16 16">
                                     <path
                                         d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z" />
                                 </svg>
@@ -303,14 +307,14 @@
                 </div>
                 <!-- CARD 2 -->
                 <div class="row pb-4">
-                    <div class="col-md-5 offset-md-2">
+                    <div class="col-lg-5 offset-lg-3 col-md-8 offset-md-1 col-sm-11">
                         <div class="card bg-dark">
                             <div class="card-header row" id="header-text-img2">
-                                <img src="assets/jada-griffin.jpg"
-                                    class="float-md-start img-fluid rounded-circle col-md-3" alt="Player TopScore">
-                                <h2 class="col-md-5 text-md-start">Jada Griffin Nerdreactor</h2>
+                                <img src="assets/jada-griffin.jpg" class="float-start img-fluid rounded-circle col-sm-3"
+                                    alt="Player TopScore">
+                                <h2 class="col-sm-5 text-start">Jada Griffin Nerdreactor</h2>
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-                                    class="ms-md-5 bi bi-twitter col-md-2" viewBox="0 0 16 16">
+                                    class="ms-sm-5 bi bi-twitter col-sm-2" viewBox="0 0 16 16">
                                     <path
                                         d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z" />
                                 </svg>
@@ -325,14 +329,14 @@
                 </div>
                 <!-- CARD 3 -->
                 <div class="row pb-4">
-                    <div class="col-md-5 offset-md-7">
+                    <div class="col-lg-5 offset-lg-7 col-md-8 offset-md-4 col-sm-11">
                         <div class="card bg-dark">
                             <div class="card-header row" id="header-text-img3">
                                 <img src="assets/aaron-williams.jpg"
-                                    class="float-md-start img-fluid rounded-circle col-md-3" alt="Player TopScore">
-                                <h2 class="col-md-7 text-md-start">Aaron Williams Uproxx</h2>
+                                    class="float-start img-fluid rounded-circle col-sm-3" alt="Player TopScore">
+                                <h2 class="col-md-6 col-sm-6 text-start">Aaron Williams Uproxx</h2>
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-                                    class="bi bi-twitter col-md-2" viewBox="0 0 16 16">
+                                    class="bi bi-twitter col-sm-2 ms-sm-2 ms-md-1" viewBox="0 0 16 16">
                                     <path
                                         d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z" />
                                 </svg>
@@ -354,7 +358,7 @@
         <div class="container-fluid">
             <div class="container">
                 <div class="row py-5">
-                    <div class="col-xl">
+                    <div class="col-lg">
                         <figure>
                             <img src="assets/skull.png" alt="skull.png" class="img-fluid" width="65%">
                         </figure>
@@ -371,7 +375,7 @@
                             </p>
                         </div>
                         <div class="row" id="form-email">
-                            <div class="form col-md-11 pt-md-5">
+                            <div class="form col-sm-11 pt-md-5">
                                 <label class="form-label email" for="email">Email:</label>
                                 <div class="input-group">
                                     <input type="text" class="form-control bg-dark" placeholder="youremail@gmail.com">
@@ -386,7 +390,7 @@
         </div>
         <div class="container">
             <div class="row justify-content-end text-end" id="logo-color">
-                <div class="col-md-1">
+                <div class="col-sm-1">
                     <a href="https://www.facebook.com/">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                             class="bi bi-facebook fb" viewBox="0 0 16 16">
@@ -395,7 +399,7 @@
                         </svg>
                     </a>
                 </div>
-                <div class="col-md-1">
+                <div class="col-sm-1">
                     <a href="https://twitter.com/?lang=en">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                             class="bi bi-twitter twitter" viewBox="0 0 16 16">
@@ -404,7 +408,7 @@
                         </svg>
                     </a>
                 </div>
-                <div class="col-md-1">
+                <div class="col-sm-1">
                     <a href="https://www.youtube.com/">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                             class="bi bi-youtube yt" viewBox="0 0 16 16">
@@ -413,7 +417,7 @@
                         </svg>
                     </a>
                 </div>
-                <div class="col-md-1">
+                <div class="col-sm-1">
                     <a href="https://www.instagram.com/?hl=en">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                             class="bi bi-instagram ig" viewBox="0 0 16 16">
@@ -425,10 +429,10 @@
             </div>
             <hr>
             <div class="row" id="text-footer">
-                <div class="col-md-6">
+                <div class="col-lg-6 col-md-12 col-sm-12 text-sm-center">
                     <p>© 2018 Your Games, inc. All Rights Reserved</p>
                 </div>
-                <div class="col-md-6 text-md-end">
+                <div class="col-lg-6 text-lg-end col-md-12 col-sm-12 text-sm-center pb-sm-2">
                     <a href="#"><span>PRIVACY POLICY </span></a>|
                     <a href="#"><span>TERMS OF SERVICES </span></a>|
                     <a href="#"><span>CODE OF CONDUCT</span></a>
