--- a/index.html
+++ b/index.html
@@ -175,7 +175,6 @@
     <!-- Gameplay Options END TAG -->
     <!-- Game Feature -->
     <section id="game-feature">
-        <!-- <div class="container-fluid"> -->
         <div class="container">
             <div class="row justify-content-end ms-lg-0 ps-lg-0 pt-5 pe-5 ms-md-3" id="collumn-feature">
                 <div class="col-lg-5 col-md-8 col-sm-10 ps-lg-0 fw-bold text-light text-sm-start">
@@ -215,7 +214,6 @@
                 </div>
             </div>
         </div>
-        <!-- </div> -->
     </section>
     <!-- Game Feature End Tag -->
     <!-- System Requirement -->
@@ -278,7 +276,7 @@
             <div class="container">
                 <div class="row pt-5 justify-content-sm-start">
                     <div class="col-lg-5 col-md-8 col-sm-12" id="TextTopScore">
-                        <h1>Top Scores</h1>
+                        <h1>TOP SCORES</h1>
                         <p>This top score from various games provided on this platform</p>
                         <button class="btn btn bg-warning">See More</button>
                     </div>
